--- a/Natural_Language_Processing/sst_classifier.ipynb
+++ b/Natural_Language_Processing/sst_classifier.ipynb
@@ -1384,14 +1384,14 @@
         "outputId": "88bb2537-7e32-4db0-d973-d84921609d93"
       },
       "source": [
-        "print('Precission: ', len(true_positives) / (len(true_positives)+ len(false_positives)))"
+        "print('Precision: ', len(true_positives) / (len(true_positives)+ len(false_positives)))"
       ],
       "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Precission:  0.9248349535449693\n"
+            "Precision:  0.9248349535449693\n"
           ],
           "name": "stdout"
         }
